Changes from 2.0.8 to 2.1.0
---------------------------
** Improvement
    * [FELIX-5458] Improved ConfigurationPlugin Support (OSGi R7)


Changes from 2.0.6 to 2.0.8
---------------------------
** Improvement
    * [FELIX-5459] Use Java 6 as minimum version
    * [FELIX-5374] Reduce severity of log message from SCR when there is no metatype
    * [FELIX-5474] Do not call no-arg Bundle.getHeaders() method


Changes from 2.0.4 to 2.0.6
---------------------------
** Bug
    * [FELIX-5315] Unexpected release of ConfigurationAdmin service in RegionConfigurationSupport
    * [FELIX-5316] Updating from SCR 2.0.2 to SCR 2.0.4 leads to null pointers
    * [FELIX-5318] SCR causes startup to wait when bundle uninstall itself in activator


Changes from 2.0.2 to 2.0.4
---------------------------
** Improvement
    * [FELIX-5257] Improve formatting of command list output
    * [FELIX-5243] Make the code more reusable
    * [FELIX-5194] Pay attention if configuration change count doesn't change
    * [FELIX-5174] Logging involving Configuration should show change count
    * [FELIX-5129] ScrInfo info should more explicitly indicatte there are no component configurations
    * [FELIX-4607] Configure with nested annotations/interfaces

** Bug
    * [FELIX-5300] ServiceComponentRuntime should not throw IllegalStateException
    * [FELIX-5276] Possible hang when unbind method alters service properties
    * [FELIX-5270] Configuration race between update and delete
    * [FELIX-5264] Configuration updates may be missed
    * [FELIX-5256] Object conversion should pass through unrecognized classes of the same type
    * [FELIX-5220] Alarmist logging when bundle stops before we've activated it
    * [FELIX-5213] ComponentContext.getServiceReference returns null though service registered
    * [FELIX-5202] ServiceComponentRuntimeImpl NPE with subsystems/regions
    * [FELIX-5186] Alarmist logging on asynchronous service changes